--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -22,3 +22,51 @@ body {
 
 /* STYLES */
 /* Write your CSS below */
+
+.foto-portada {
+  background-image: url('/apple-pie/images/apple-pie.jpg');
+  background-size:cover;
+  background-attachment: fixed;;
+  background-position: center;
+  height:100vh;
+  color:white;
+  font-size:42px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.container {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+.imatges-recepta {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hr {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+.p {
+  width: 84%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.h2 {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
