--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -7,3 +7,51 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px
 }
+
+.foto-portada {
+  background-image: url('/french-soup/images/soup.jpg');
+  background-size:cover;
+  background-attachment: fixed;;
+  background-position: center;
+  height:100vh;
+  color:white;
+  font-size:42px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.container {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+.imatges-recepta {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hr {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+.p {
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.h2 {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
