--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -36,6 +36,11 @@ body {
   justify-content: center;
   margin-bottom: 50px;
 }
+
+h1 {
+  font-size: 6rem;
+}
+
 .container {
   width: 70%;
   margin-left: auto;
@@ -59,7 +64,8 @@ body {
 }
 
 .p {
-  width: 84%;
+  width: 70%;
+  font-size: 1.3rem;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
@@ -69,4 +75,18 @@ body {
 .h2 {
   font-weight: bold;
   margin-bottom: 10px;
+}
+
+ol li::marker {
+  /*3. Set the new style for the list markers */
+  content: counter(list-item) ") ";
+  counter-increment: 1;
+}
+ol li {
+  list-style-type: none;
+}
+
+ul li::marker {
+  /*3. Set the new style for the list markers */
+  content: "- ";
 }
