--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -21,6 +21,11 @@ html {
   justify-content: center;
   margin-bottom: 50px;
 }
+
+h1 {
+  font-size: 6rem;
+}
+
 .container {
   width: 70%;
   margin-left: auto;
@@ -44,7 +49,8 @@ html {
 }
 
 .p {
-
+  font-size: 1.3rem;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
@@ -54,4 +60,18 @@ html {
 .h2 {
   font-weight: bold;
   margin-bottom: 10px;
+}
+
+ol li::marker {
+  /*3. Set the new style for the list markers */
+  content: counter(list-item) ") ";
+  counter-increment: 1;
+}
+ol li {
+  list-style-type: none;
+}
+
+ul li::marker {
+  /*3. Set the new style for the list markers */
+  content: "- ";
 }
